# pac-at

./: .gitignore  CLAUDE.md  README.md
.superpowers/sdd/: final-code-review.diff  progress.md  review-2d84b1d..5339ab9.diff  review-377ceb5..672d9b6.diff  review-377ceb5..9138ccc.diff  review-4f8a7ed..f7f69ed.diff  review-5339ab9..19d29a0.diff  review-5339ab9..e5bef3c.diff  review-672d9b6..eec7892.diff  review-79b2ed0..e5942a4.diff  review-8801589..03bed93.diff  review-8801589..4f8a7ed.diff  review-92400fa..12e2f2e.diff  review-b8837ac..c1da414.diff  review-e5bef3c..ffaf228.diff  review-f7f69ed..377ceb5.diff  review-ffaf228..92400fa.diff  task-0-brief.md  task-0-report.md  task-1-brief.md  task-1-report.md  task-10-brief.md  task-10-report.md  task-11-brief.md  task-11-report.md  task-12-brief.md  task-12-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  (+14 more)
backend/: .env.example  pyproject.toml
backend/app/: config.py  crud.py  db.py  exceptions.py  main.py  models.py  schemas.py
backend/app/clients/: obs_client.py  youtube_client.py
backend/app/routers/: auth.py  broadcasts.py  scenes.py  schedules.py  series.py  status.py
backend/app/scheduler/: engine.py  preflight.py  recurrence.py  series.py  steps.py
backend/docs/: architecture.md
backend/tests/: conftest.py  test_api_crud.py  test_api_integrations.py  test_api_status.py  test_engine.py  test_models.py  test_obs_client.py  test_recurrence.py  test_series.py  test_steps.py  test_youtube_client.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+16 files in other folders)
