[project]
name = "yt-livestream-scheduler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "obsws-python>=1.6",
    "google-api-python-client>=2.120",
    "google-auth-oauthlib>=1.2",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
